--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -7,7 +7,7 @@
                       <input type="hidden" name="user_id" value="{$profile.user_id}" />
                       <input type="hidden" name="site_id" value="{$site.id}" />
 
-                      <label>Logo Image</label>
+                      <label>Profile Image</label>
                       <div class="custom_button_cover">
                         <div class="commonin_row">
                           {"user_profile"|object_uploader:$profile.profile_id:"photo":["resize" => 1, "cloud" => 1, "view" => "list", "allow_multiple" => 0]}
