--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -49,7 +49,7 @@
               <div class="col-sm-6">
               <label>Date of birth</label>
               <div class="input-group">
-                <input type="text" id="date_of_birth" value="{$scope.profile.date_of_birth}" class="form-control datepicker" data-date="{$scope.profile.date_of_birth}" name="date_of_birth" placeholder="Date of birth">
+                <input type="text" id="date_of_birth" value="{$scope.profile.date_of_birth}" class="form-control datepicker" name="date_of_birth" placeholder="Date of birth">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
               </div>
               <!--div class="help-block with-errors">Whole Number</div-->                          
