Modified to change october 02-10-2020

--- a/www/css/afr_sidebar.css
+++ b/www/css/afr_sidebar.css
@@ -167,7 +167,7 @@ body{
     width: 100%;
 }
 .custom_button_float{
-	position: absolute;
+	/*position: absolute;*/
     bottom: 66px;
     left: 125px;
     z-index: 999;
