--- a/www/css/afr_base.css
+++ b/www/css/afr_base.css
@@ -404,3 +404,16 @@ img.origin {
   width: auto;
 }
 
+.smart_filter_exhibirion_page_ratio43 {
+    width: 100%;
+    text-align: center;
+}
+
+.smart_filter_exhibirion_page_timeline-body {
+    width: 100%;
+    text-align: center;
+}
+.smart_filter_exhibirion_page {
+    width: 100%;
+    text-align: center;
+}
