--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -7,12 +7,11 @@
                       <input type="hidden" name="user_id" value="{$profile.user_id}" />
                       <input type="hidden" name="site_id" value="{$site.id}" />
 
-                      <label>Profile Image</label>
+                      <label>Profile Image<span class="control-label-before optional">&nbsp;&nbsp;&nbsp;&nbsp;(Maximum of one image)</span></label>
                       <div class="custom_button_cover">
-                        <div class="commonin_row">
+                        <div class="commonin_row"> 
                           {"user_profile"|object_uploader:$profile.profile_id:"photo":["resize" => 1, "cloud" => 1, "view" => "list", "allow_multiple" => 0]}
                           {* $scope.uploader *}
-
                         </div>
                         <div class="custom_button_float"> 
                           <span>OR &nbsp &nbsp</span>
@@ -26,7 +25,7 @@
                       </div>
 
                       <div class="form-group">
-                        <label>About</label>
+                        <label>About<span class="optional">(Recommended)</span></label>
                         <textarea name="bio_description" class="summernote form-control" placeholder="Please describe yourself and your interests.">{$scope.profile.bio_description}</textarea>
                       </div>
 
