modified commit by vignesh on 05-01-2021

--- a/pages/components/_user-profile-edit-details.html
+++ b/pages/components/_user-profile-edit-details.html
@@ -91,7 +91,7 @@
   {$count = count($contact)}
   <div class="row mb20">
     <div class="form-group col-sm-6">
-      <label for="contacts">Additional Contacts</label>
+      <label for="contacts">Additional Contacts<span class="optional">(Optional)</span> </label>
       {if ($contact)}
         {for $i = 0 to 4}
           <div class="row mt20" style="margin-bottom: 10px;">
