--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -13,14 +13,14 @@
             
             <div class="row">              
               <div class="col-sm-6">
-                <label for="first_name">First Name</label>
+                <label for="first_name" class="control-label" >First Name</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-user"></i></span>
                   <input name="first_name" id="first_name" class="form-control" value="{$scope.profile.first_name}" type="text" required/>
                 </div>         
               </div>      
               <div class="col-sm-6">
-                <label for="last_name">Last Name</label>
+                <label for="last_name" class="control-label" >Last Name</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-user"></i></span>
                   <input name="last_name" id="last_name" class="form-control" value="{$scope.profile.last_name}" type="text" required />
@@ -30,7 +30,7 @@
             
             <div class="row mt20">
               <div class="col-sm-6">
-                <label for="display_name">Display Name</label>
+                <label for="display_name" class="control-label" >Display Name</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-user"></i></span>
                   <input name="display_name" id="display_name" class="form-control" value="{$scope.profile.display_name}" type="text" />
