--- a/pages/components/_user-login-form.html
+++ b/pages/components/_user-login-form.html
@@ -11,7 +11,7 @@
             </div>
             <input name="redirect" type="hidden" class="form-control login-redirect" value="{$get.ref|remove_query_var:'act'}" />
             <input name="uri" type="hidden" class="form-control" value="{$this_url|remove_query_var:'act'}" />
-            <input class="btn btn-primary" type="submit" value="{'log in'|translate:'c':0}" />
+            <input class="btn" type="submit" style="background-color:#3eb0f7; font-weight: bold; color:white" value="{'log in'|translate:'c':0}" />
             <div class='gap gap-small'></div>                      
           </form>
 
