--- a/pages/components/_user-register-form.html
+++ b/pages/components/_user-register-form.html
@@ -1,3 +1,4 @@
+
           <form class="ajax-submit signup-form" method="get" data-handler="user-register">
             <div class="form-group form-group-icon-left"><i class="fa fa-user input-icon"></i>
               <label>First Name</label>
@@ -10,6 +11,10 @@
             <div class="form-group form-group-icon-left"><i class="fa fa-envelope input-icon"></i>
               <label>Email</label>
               <input name="username" class="form-control" placeholder="e.g. johndoe@gmail.com" type="text" />
+                <!-- <span class="form-group form-group-icon-left help-block" style="color: red;">* If you are already subscribed, please use the same email here *</span> -->
+                <span class="form-group form-group-icon-left help-block" ><b><i>* Sign up with the same e-mail you used to create your subscription (free,basic, professional, premium or VIP). If you haven't created a subscription yet, choose one <a style="color: orange;" target="_blank" class='fancybox-noscroll fancybox.ajax' href="https://vpatina.com/pricing-plan">here </a>.
+                 *</i></b></span>
+
             </div>
             <div class="form-group form-group-icon-left"><i class="fa fa-lock input-icon"></i>
               <label>Password</label>
@@ -19,11 +24,17 @@
               <label>Repeat Password</label>
               <input name="password2" class="form-control" type="password" placeholder="my secret password" />
             </div>
-            <input class="btn btn-primary" type="submit" value="Sign up for {$site.name}" />
+            <input class="btn" style="background-color:#32CD32; font-weight: bold; color:white" type="submit" value="Sign up for {$site.name}" />
             <div class='gap gap-small'></div>                      
             <input name="redirect" type="hidden" class="form-control login-redirect" value="{$get.ref|remove_query_var:'act'}" />
             <input name="uri" type="hidden" class="form-control" value="{$this_url|remove_query_var:'act'}" />
-            <input name="user_terms" type="hidden" value="1" />By signing up, I agree to the <a class='fancybox-noscroll fancybox.ajax' href='ajax.php?oper=load-page-content&amp;site_id={$site.id}&amp;page_type=1005'>Terms &amp; Conditions</a>
-            <div class='gap gap-small'></div>                      
-            <input name="site_id" type="hidden" value="{$site.id}" />
+            <input name="user_terms" type="hidden" value="1" />By signing up, I agree to the <a class='fancybox-noscroll fancybox.ajax' href="/terms-and-conditions">Terms &amp; Conditions</a><br><br>
+            <a class='fancybox-noscroll fancybox.ajax' href="/privacy-policy">Privacy Policy </a>
+
+            <div class='gap gap-small'></div>   
+
+            <input name="site_id" type="hidden" value="{$site.id}" /> 
+
           </form>
+
+            
