--- a/pages/components/_user-account-subscription.html
+++ b/pages/components/_user-account-subscription.html
@@ -75,8 +75,7 @@
 					<h3 class="card-title" style="color: green; font-weight: bold;">Your Current Plan</h3>
 					<!--Text-->
 
-					
-					{if ($scope.user.subscription_reference!=null) }
+					{if ($scope.user.subscription_plan_id!=1) }
 						<p class="card-text">{$subscription_plan.name} (€{$subscription_plan.cost})</p>
 
 						<!-- <p class="card-text">Cost - {$subscription_plan.cost} $</p> -->
@@ -86,19 +85,19 @@
 
 						<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 						{if ($scope.user.subscription_plan_id!=9) }
-							<button type="button" class="btn btn-success ml5" style="border-radius:10px;"> <a target="_blank" href="{$subscription_plan.upgrade_link}&BACK_REF=https://dev.vpatina.com/exhibition/payment-upgrade?user={$scope.user.username}" style="color: white;"> Upgrade Plan </a></button>
+							<button type="button" class="btn btn-success ml5" style="border-radius:10px;"> <a target="_blank" href="{$subscription_plan.upgrade_link}&LICENSE={$scope.user.subscription_reference}&BACK_REF={$scope.site_url}/exhibition/payment-upgrade?user={$scope.user.username}" style="color: white;"> Upgrade Plan </a></button>
 						{/if}
 
 					{else}
 						{if ($scope.user.subscription_plan_id==null) }
 							<p class="card-text">Currently you are in a Beta Testing Plan - please contact vPatina for information on how to upgrade <a target="_blank" href="mailto:info@vpatina.com"> (info@vpatina.com)</a></p>
 
-							<button type="button" class="btn btn-success ml5"> <a target="_blank" href="https://vpatina.com/pricing-plan" style="color: white;">Click to Buy Plan </a></button>
+							<button type="button" class="btn btn-success ml5"> <a target="_blank" href="{$scope.site_url}/pricing-plan" style="color: white;">Click to Buy Plan </a></button>
 						{else}
 
 							<p class="card-text">{$subscription_plan.name} (€{$subscription_plan.cost})</p>
 
-							<button type="button" class="btn btn-success ml5"> <a target="_blank" href="https://vpatina.com/pricing-plan" style="color: white;"> Buy Plan </a></button>
+							<button type="button" class="btn btn-success ml5"> <a target="_blank" href="{$scope.site_url}/pricing-plan" style="color: white;"> Buy Plan </a></button>
 						{/if}
 
 					{/if}
