--- a/pages/components/_user-account-subscription.html
+++ b/pages/components/_user-account-subscription.html
@@ -92,7 +92,7 @@
 						{if ($scope.user.subscription_plan_id==null) }
 							<p class="card-text">Currently you are in a Beta Testing Plan - please contact vPatina for information on how to upgrade <a target="_blank" href="mailto:info@vpatina.com"> (info@vpatina.com)</a></p>
 
-							<button type="button" class="btn btn-success ml5"> <a target="_blank" href="https://vpatina.com/pricing-plan" style="color: white;">Click to Buy Plan </a></button>
+							<button type="button" class="btn btn-success ml5"> <a target="_blank" href="{$scope.site_url}/pricing-plan" style="color: white;">Click to Buy Plan </a></button>
 						{else}
 
 							<p class="card-text">{$subscription_plan.name} (€{$subscription_plan.cost})</p>
