ministe bugs, quickstart

--- a/pages/components/_user-account-subscription.html
+++ b/pages/components/_user-account-subscription.html
@@ -101,6 +101,7 @@
 						{/if}
 
 					{/if}
+					<span class="form-group form-group-icon-left help-block pt5" style="color: red;font-size: 14px;"><b><i>IMPORTANT : YOU MUST USE YOUR LOGIN E-MAIL <a><u> ({$scope.user.username})</u></a> WHEN BUYING/ UPGRADING (TAKE CARE WHEN USING PAY PAL AUTOCOMPLETE)<i></b> </span>
 					<span class="form-group form-group-icon-left help-block pt5" style="color: black;"><b><i>(It takes up to 30 minutes for the plan to update when you upgrade)<i></b> </span>
 
 
@@ -213,7 +214,7 @@
 			</div>
 			<div id="sub8collapse4" class="panel-collapse collapse">
 				<div class="panel-body">
-					<p>You can reduce the price of a plan by choosing a longer subscription period. By getting a 3-month subscription, you will get a 5% discount; 6 months – 10%, 9 months – 15%, and the annual plan brings 20% in savings. You can also reduce the cost by changing the rankings check frequency to once every 3 days (20% off) or weekly (40% off) instead of daily.</p>
+					<p>You can reduce the price of a plan by choosing a longer subscription period.</p>
 				</div>
 			</div>
 		</div>
