--- a/www/css/gallery/afr_gallery.css
+++ b/www/css/gallery/afr_gallery.css
@@ -500,3 +500,14 @@ UL.simple-list LI DIV.image-title A.full-link {
 .file-container DIV.buttons{position:absolute;top:5px;left:10px}
 .file-container DIV.name{position:absolute;top:104px;left:0px;font-size:0.8em;width:100px;height:20px;overflow:hidden;text-overflow:ellipsis}
 
+
+@media only screen and (max-width: 767px) {
+	.photo-grid .photo-grid-container, .photo-grid-5 .photo-grid-container{
+		width:49% !important;
+		padding: 0px 10px;
+	}
+	figure.effect-1002 p{
+		width: 100%;
+		border-right: 0px solid #fff;
+	}
+}
