--- a/pages/components/_user-account-integration.html
+++ b/pages/components/_user-account-integration.html
@@ -15,7 +15,7 @@
 	          	<a href="https://vimeo.com/521672828" class="btn btn-info button-large popup-iframe" data-effect="mfp-fade"><i class="fa fa-play-circle"></i>Mail Manager Review</a>
 
 
-	            		<label for="Sub title" >Mailing list sign up ( We recommend <a href="https://mailchimp.com/">mailchimp</a>)</label>
+	            		<label for="Sub title" >Mailing list sign up ( We recommend <a target="_blank" href="https://mailchimp.com/">mailchimp</a>)</label>
 
 	            	</td>
 	        		<td width="20%">
@@ -36,7 +36,7 @@
 	          	<tr>
 	            	<td style= "width:200px">
 			<a href="https://vimeo.com/527374433" class="btn btn-info button-large popup-iframe" data-effect="mfp-fade"><i class="fa fa-play-circle"></i>Appointment Engine Review</a>
-	            		<label for="Sub title">Booking Engine (We recommend <a href="https://www.eventbrite.nl/">Eventbrite</a> for events and <a href="https://www.chilipiper.com/">Chilipiper</a> or <a href="https://calendly.com/">Calendly</a> for meetings)</label>
+	            		<label for="Sub title">Booking Engine (We recommend <a target="_blank" href="https://www.eventbrite.nl/">Eventbrite</a> for events and <a target="_blank" href="https://www.chilipiper.com/">Chilipiper</a> or <a target="_blank" href="https://calendly.com/">Calendly</a> for meetings)</label>
 
 
 
