--- a/pages/components/_user-register-form.html
+++ b/pages/components/_user-register-form.html
@@ -12,7 +12,7 @@
               <label>Email</label>
               <input name="username" class="form-control" placeholder="e.g. johndoe@gmail.com" type="text" />
                 <!-- <span class="form-group form-group-icon-left help-block" style="color: red;">* If you are already subscribed, please use the same email here *</span> -->
-                <span class="form-group form-group-icon-left help-block" ><b><i>* Sign up with the same e-mail you used to create your subscription (free,basic, professional, premium or VIP). If you haven't created a subscription yet, choose one <a style="color: orange;" target="_blank" class='fancybox-noscroll fancybox.ajax' href="https://vpatina.com/pricing-plan">here </a>.
+                <span class="form-group form-group-icon-left help-block" ><b><i>* If you have just bought a subscription (basic, professional, premium or VIP), please register/ sign up with the same e-mail you used to create that subscription. If you haven't created a subscription yet, you can register for free for our free version, or buy a subscription <a style="color: orange;" target="_blank" class='fancybox-noscroll fancybox.ajax' href="https://vpatina.com/pricing-plan">here </a>.
                  *</i></b></span>
 
             </div>
