--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -9,11 +9,11 @@
                       <!-- <input hidden="1" name="site_url" type="hidden" id="site_url" value="{$scope.site_url}"/> -->
 
                       <!-- <input hidden="1" name="profile_id" type="hidden" id="profile_id" value="{$scope.user.profile_id}"/> -->
- <input hidden="1" name="user_id" type="hidden" id="user_id" value="{$user.id}"/>
+ <input hidden="1" name="user_id" type="hidden" id="user_id" value="{$scope.user_id}"/>
 
     <input hidden="1" name="site_url" type="hidden" id="site_url" value="{$scope.site_url}"/>
 
-    <input hidden="1" name="profile_id" type="hidden" id="profile_id" value="{$scope.user.profile_id}"/>
+    <input hidden="1" name="profile_id" type="hidden" id="profile_id" value="{$profile.profile_id}"/>
                       <label>Profile Image<span class="control-label-before optional">&nbsp;&nbsp;&nbsp;&nbsp;(Maximum of one image)</span></label>
                       <div class="custom_button_cover">
                         <div class="commonin_row"> 
